# betainc

./: .gitignore  README.md  build.py  pyproject.toml  setup.py
betainc/: __init__.py  betainc.c  betainc.pyx
tests/: test_betainc.py
webassembly/: function.js  function.wasm  incbeta.c  index.html  script.js
